--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" /> -->
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Scopri ricette deliziose e salutari per categorie vegetariane e vegane. Unisciti a noi per esplorare una varietà di ingredienti freschi e piatti gustosi!"
+    />
+    <meta name="keywords" content="vegetariano, vegano, ricette, cucina, ingredienti, vegetarianGo" />
+
+    <!-- Open Graph tags for social media -->
+    <meta property="og:title" content="LeafyBite- Scopri Ricette Vegetariane e Vegane" />
+    <meta
+      property="og:description"
+      content="Esplora ricette deliziose e salutari per categorie vegetariane e vegane."
+    />
+
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site for vegeterian recipes" />
     <title>leafybite</title>
